<resources>
    <string name="app_name">APK</string>
    <string name="hint">hint</string>
    <string name="volym">Volym:</string>
    <string name="textview">TextView</string>
    <string name="apk_ml_kr">APK: (ml/kr)</string>
    <string name="r_kna">Räkna</string>
    <string name="volym_i_cl">Volym i CL:</string>
    <string name="alkohol">Alkohol</string>
    <string name="alkoholprocent">Alkoholprocent:</string>
    <string name="pris">Pris</string>
    <string name="clear">Clear</string>
    <string name="g_till_listan">Gå till listan</string>
    <string name="l_gg_till_i_listan">Lägg till i listan</string>
    <string name="namn_valfritt">Namn: (Valfritt)</string>
    <string name="ver_20">Över 20?</string>
    <string name="title_activity_side_bar_menu">sideBarMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="TODO">TODO</string>
    <string name="heeej">HEEEJ</string>
    <string name="title_activity_sidebar">SidebarActivity</string>
</resources>
